fix: perbaikan tampilan pada footer, hero, project, dan service

--- a/src/partial/hero.html
+++ b/src/partial/hero.html
@@ -33,20 +33,22 @@
                         <span class="font-extrabold text-yellow-500">.</span>
                     </h1>
                     <h3 class="text-2xl">
-                        — Seorang programmer dan web developer.
+                        Seorang Programmer Web Developer.
                     </h3>
                     <p>
-                        Selamat datang di halaman website saya. <br> Lagi butuh bantuan buat bikin
+                        Selamat datang di halaman website saya. <br> Butuh bantuan buat bikin
                         <span class="font-bold text-sky-950 border-b-2 border-yellow-500">Aplikasi</span>,
                         <span class="font-bold text-sky-950 border-b-2 border-yellow-500">Website Keren</span>,
                         atau punya
-                        <span class="font-bold text-sky-950 border-b-2 border-yellow-500">Ide Digital menarik</span>
+                        <span class="font-bold text-sky-950 border-b-2 border-yellow-500">Ide Digital</span>
                         yang ingin diwujudkan?
                     </p>
-                    <a href="/#contac"
-                        class="text-white rounded-xl bg-sky-900 hover:bg-sky-700 inline-block transition duration-300 ease-in-out px-4 py-2">
-                        Hubungi saya
-                    </a>
+                    <h3>
+                        <a href="#contac"
+                            class="text-white rounded-xl bg-sky-900 hover:bg-sky-700 inline-block transition duration-300 ease-in-out px-4 py-2">
+                            Hubungi saya
+                        </a>
+                    </h3>
                 </div>
             </div>
         </div>
