--- a/src/partial/project.html
+++ b/src/partial/project.html
@@ -16,21 +16,23 @@
                 <div class="col-span-full md:col-span-6 order-2 md:order-1">
                     <div class="space-y-4">
                         <h1 class="text-2xl font-bold text-sky-900">
-                            SIMPeg
+                            <a href="https://simpeg.merantikab.go.id/" class="hover:underline">
+                                SIMPeg
+                            </a>
                         </h1>
                         <p>
-                            Sistem Informasi Manajemen Kepegawaian Kabupaten Kepulauan
-                            Meranti.
+                            Sistem Informasi Manajemen Kepegawaian Kabupaten Kepulauan Meranti.
                         </p>
-                        <!-- <p class="text-slate-500">
-                            Laravel, Filamentphp
-                        </p> -->
-                        <!-- <div id="tech-list" class="flex gap-4">
+                        <div class="flex gap-4">
                             <div
-                                class="flex items-center gap-2 bg-sky-950 text-yellow-500 hover:bg-slate-100 px-4 py-2 rounded-xl">
+                                class="flex items-center gap-2 bg-slate-100 hover:bg-slate-200 px-4 py-2 rounded-xl transition duration-300 ease-in-out ">
                                 Laravel
                             </div>
-                        </div> -->
+                            <div
+                                class="flex items-center gap-2 bg-slate-100 hover:bg-slate-200 px-4 py-2 rounded-xl transition duration-300 ease-in-out ">
+                                Filamentphp
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -44,12 +46,19 @@
                 <div class="col-span-full md:col-span-6 order-2 md:order-2">
                     <div class="space-y-4">
                         <h1 class="text-2xl font-bold text-sky-900">
-                            e-Wartawan
+                            <a href="https://e-wartawan.merantikab.go.id/" class="hover:underline">
+                                e-Wartawan
+                            </a>
                         </h1>
                         <p>
-                            Aplikasi hitung poin kerja sama Media dan Pemerintah Kabupaten
-                            Kepulauan Meranti.
+                            Aplikasi hitung poin kerja sama Media dan Pemerintah Kabupaten Kepulauan Meranti.
                         </p>
+                        <div class="flex gap-4">
+                            <div
+                                class="flex items-center gap-2 bg-slate-100 hover:bg-slate-200 px-4 py-2 rounded-xl transition duration-300 ease-in-out ">
+                                Laravel
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -63,12 +72,19 @@
                 <div class="col-span-full md:col-span-6 order-2 md:order-1 ">
                     <div class="space-y-4">
                         <h1 class="text-2xl font-bold text-sky-900">
-                            Tamu
+                            <a href="https://tamu.merantikab.go.id/" class="hover:underline">
+                                Tamu
+                            </a>
                         </h1>
                         <p>
-                            Aplikasi Buku Tamu untuk seluruh OPD Kabupaten Kepulauan
-                            Meranti.
+                            Aplikasi Buku Tamu untuk seluruh OPD Kabupaten Kepulauan Meranti.
                         </p>
+                        <div class="flex gap-4">
+                            <div
+                                class="flex items-center gap-2 bg-slate-100 hover:bg-slate-200 px-4 py-2 rounded-xl transition duration-300 ease-in-out ">
+                                Laravel
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -82,25 +98,22 @@
                 <div class="col-span-full md:col-span-6 order-2 md:order-2">
                     <div class="space-y-4">
                         <h1 class="text-2xl font-bold text-sky-900">
-                            SiPENGSAN
+                            <a href="http://sipengsanpedu.merantikab.go.id/" class="hover:underline">
+                                SiPENGSAN
+                            </a>
                         </h1>
                         <p>
-                            Sistem Informasi Pengelolaan Kegiatan Kawasan Perbatasan
-                            Kepulauan Meranti.
+                            Sistem Informasi Pengelolaan Kegiatan Kawasan Perbatasan Kepulauan Meranti.
                         </p>
+                        <div class="flex gap-4">
+                            <div
+                                class="flex items-center gap-2 bg-slate-100 hover:bg-slate-200 px-4 py-2 rounded-xl transition duration-300 ease-in-out ">
+                                Codeigniter
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="col-span-full flex items-center gap-6">
-            <div class="grow h-px bg-sky-900"></div><a href="/project"
-                class="inline-flex items-center gap-2 text-base font-normal text-white rounded-xl bg-sky-900 hover:bg-sky-700 transition duration-300 ease-in-out px-4 py-2">
-                Selengkapnya <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="size-4">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25">
-                    </path>
-                </svg></a>
         </div>
     </div>
 </section>
