--- a/src/partial/service.html
+++ b/src/partial/service.html
@@ -19,10 +19,9 @@
                         <span class="font-extrabold text-4xl text-yellow-500">.</span>
                     </h1>
                     <p>
-                        Saya membantu membuat tampilan website yang modern, responsif, dan user-friendly. Setiap
+                        Membuat tampilan website yang modern, responsif, dan user-friendly. Setiap
                         desain disesuaikan dengan identitas merek dan kebutuhan pengguna agar memberikan pengalaman
-                        visual yang menarik dan profesional. Mulai dari wireframe hingga hasil akhir, semuanya
-                        dirancang dengan detail dan konsistensi.
+                        visual yang menarik dan profesional. Semua dirancang dengan detail dan konsistensi.
                     </p>
                 </div>
             </div>
