--- a/src/partial/footer.html
+++ b/src/partial/footer.html
@@ -4,8 +4,6 @@
             <div class="col-span-full md:col-span-6 order-2 md:order-1">
                 <div class="space-y-4">
                     <div class="space-y-2">
-                        <!-- <img src="/src/assets/image/imz.svg" alt="image"
-                            class="h-20 aspect-square bg-white rounded-md p-3" /> -->
                         <svg class="h-18 w-auto" viewBox="0 0 33.866663 22.577423" xmlns="http://www.w3.org/2000/svg">
                             <g inkscape:label="Layer 1" inkscape:groupmode="layer" id="layer1"
                                 transform="translate(0,-32.416643)">
@@ -19,9 +17,9 @@
                         </svg>
                         <a href="" class="hover:underline">ilhammajidzaiman.github.io</a>
                     </div>
-                    <div class="flex flex-col">
+                    <div class="flex flex-col space-y-2">
                         <h1>Bagikan:</h1>
-                        <nav class="flex gap-4">
+                        <nav class="flex gap-2">
                             <button type="button" title="whatsapp"
                                 class="w-10 aspect-square flex items-center justify-center rounded-xl bg-sky-500 hover:bg-sky-600 text-white">
                                 <div>
@@ -89,13 +87,11 @@
                             <span class="font-extrabold text-yellow-500">.</span>
                         </h1>
                         <p>
-                            Lagi butuh bantuan buat bikin aplikasi, website
-                            keren, atau punya ide digital menarik yang ingin
+                            Butuh bantuan buat bikin aplikasi, website keren, atau ide digital menarik yang ingin
                             diwujudkan?
                         </p>
                         <p>
-                            Siap bantu kamu mengubah ide itu jadi sesuatu yang
-                            nyata dan bermanfaat.
+                            Siap membantu untuk mengubahnya menjadi sesuatu yang nyata dan bermanfaat.
                         </p>
                     </div>
                     <div class="space-y-2">
