fix: buka tab baru ketika klik gambar

--- a/src/partial/project.html
+++ b/src/partial/project.html
@@ -9,8 +9,10 @@
             <div class="grid grid-cols-12 gap-8 items-center">
                 <div class="col-span-full md:col-span-6 order-1 md:order-2">
                     <div class="aspect-video overflow-hidden rounded-xl">
-                        <img class="bg-slate-200 w-full h-full object-cover transition duration-300 ease-in-out hover:scale-110"
-                            src="/src/assets/image/project/thumbnail/simpeg.png" alt="SIMPeg">
+                        <a href="/src/assets/image/project/sipengsan.png" target="_blank"> <img
+                                class="bg-slate-200 w-full h-full object-cover transition duration-300 ease-in-out hover:scale-110"
+                                src="/src/assets/image/project/thumbnail/simpeg.png" alt="SIMPeg">
+                        </a>
                     </div>
                 </div>
                 <div class="col-span-full md:col-span-6 order-2 md:order-1">
@@ -39,8 +41,10 @@
             <div class="grid grid-cols-12 gap-8 items-center">
                 <div class="col-span-full md:col-span-6 order-1 md:order-1">
                     <div class="aspect-video overflow-hidden rounded-xl">
-                        <img class="bg-slate-200 w-full h-full object-cover transition duration-300 ease-in-out hover:scale-110"
-                            src="/src/assets/image/project/thumbnail/wartawan.png" alt="SIMPeg">
+                        <a href="/src/assets/image/project/sipengsan.png" target="_blank">
+                            <img class="bg-slate-200 w-full h-full object-cover transition duration-300 ease-in-out hover:scale-110"
+                                src="/src/assets/image/project/thumbnail/wartawan.png" alt="wartawan">
+                        </a>
                     </div>
                 </div>
                 <div class="col-span-full md:col-span-6 order-2 md:order-2">
@@ -65,8 +69,10 @@
             <div class="grid grid-cols-12 gap-8 items-center">
                 <div class="col-span-full md:col-span-6 order-1 md:order-2">
                     <div class="aspect-video overflow-hidden rounded-xl">
-                        <img class="bg-slate-200 w-full h-full object-cover transition duration-300 ease-in-out hover:scale-110"
-                            src="/src/assets/image/project/thumbnail/tamu.png" alt="SIMPeg">
+                        <a href="/src/assets/image/project/sipengsan.png" target="_blank">
+                            <img class="bg-slate-200 w-full h-full object-cover transition duration-300 ease-in-out hover:scale-110"
+                                src="/src/assets/image/project/thumbnail/tamu.png" alt="sipengsan">
+                        </a>
                     </div>
                 </div>
                 <div class="col-span-full md:col-span-6 order-2 md:order-1 ">
@@ -91,8 +97,10 @@
             <div class="grid grid-cols-12 gap-8 items-center">
                 <div class="col-span-full md:col-span-6 order-1 md:order-1">
                     <div class="aspect-video overflow-hidden rounded-xl">
-                        <img class="bg-slate-200 w-full h-full object-cover transition duration-300 ease-in-out hover:scale-110"
-                            src="/src/assets/image/project/thumbnail/sipengsan.png" alt="SIMPeg">
+                        <a href="/src/assets/image/project/sipengsan.png" target="_blank">
+                            <img class="bg-slate-200 w-full h-full object-cover transition duration-300 ease-in-out hover:scale-110"
+                                src="/src/assets/image/project/thumbnail/sipengsan.png" alt="tamu">
+                        </a>
                     </div>
                 </div>
                 <div class="col-span-full md:col-span-6 order-2 md:order-2">
